 . Sprite: can create sprite from SpriteSheet. deprecated creation method from SpriteSheet (issue #657)
 . Sprite: optimized rendering when using spriteSheet and subchildren (issue #XXX)
 . Sprite: flip only flips the texture (not the anchor point and children) (issue #725)
 . Templates: Updated to support v0.99, Chipmunk v5.1 and Box2D r39
 . Tests: Works independently of the display resolution
 . TextureNode: Removed Node. Superseded by Sprite
 . TMXMaps: objectGroup support offsets (issue #689)
 . TMXMaps: objectGroup: Simplified object creation. All objects are NSDictionaries. For custom objects, subclass TMXTiledMap (issue #636)
 . TMXMaps: groupNamed renamed to objectGroupNamed (issue #XXX)
 . TouchDispatcher: StandardTouchHandler returns void (not BOOL). They are executed after the TargetedHandlers (issue #710)
 . XCode: doxygen scripts runs with spaces in subdirectories (issue #684)
 
version 0.9.0-beta2 - 11-Jan-2010
 . Actions: added 2 new instant actions: FlipX and FlipY (counter-rollback of part issue #620)
 . Actions: uses FLT_EPSILON constant (issue #701)
 . Actions: prevent jerk in Repeat and RepeatForEver (issue #390)
 . Actions: RotateTo can be repeated without losing information (issue #705)
 . BitmapFontAtlas: doesn't override color when using setString (issue #610)
 . Chipmunk: removed compiler warning on chipmunk demo (issue #680)
 . CocosLive: added sanity checks on demo (issue #681)
 . Director: removed compile warning on DisplayLink director (issue #682)
 . Particles: prevent possible memory corruption when autoRemove is ON (issue #703)
 . Scheduler: Supports repeat-number-of-times in scheduled selectors (issue #630)
 . Sprite: anchor + offset + scale works  (issue #671)
 . Sprite: can create subclasses with an SpriteFrameName (issue #XXX)
 . Sprite: flip works as scale * -1 (issue #690)
 . Sprite: easier to subclass. [self init] is called (issue #485)
 . Sprite: isFrameDisplayed works OK with offsets (issue #707)